java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/incomplete.java
// IDEA-369310
@SuppressWarnings(<error descr="Attribute value must be constant">"unused".</error><error descr="Identifier expected">)</error>
class X {}